--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12738116
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,6 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=${PORT:8080}
+spring.h2.console.enabled=true
 
 # Connection pool configuration
 spring.datasource.hikari.connection-timeout=30000
@@ -17,3 +18,5 @@ spring.datasource.hikari.maximum-pool-size=10
 # Logging
 logging.level.org.hibernate.SQL=INFO
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+spring.profiles.active=prod
+debug=true
