--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.port=${PORT:8080}
@@ -13,7 +13,7 @@ spring.h2.console.enabled=true
 
 # Connection pool configuration
 spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.maximum-pool-size=50
 
 # Logging
 logging.level.org.hibernate.SQL=INFO
