--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+# spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=jdbc:mysql://root:psMqUtHEjhyEbqsmhJUfdQuOTFUOzIPG@autorack.proxy.rlwy.net:3306/railway
+#spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.username=root
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+spring.datasource.password=psMqUtHEjhyEbqsmhJUfdQuOTFUOzIPG
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
