--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,7 @@
-# spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.url=jdbc:mysql://root:psMqUtHEjhyEbqsmhJUfdQuOTFUOzIPG@autorack.proxy.rlwy.net:3306/railway
-#spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.username=root
-#spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.datasource.password=psMqUtHEjhyEbqsmhJUfdQuOTFUOzIPG
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12738212
+spring.datasource.username=sql12738212
+spring.datasource.password=Pc2QYPmdqP
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
-
-server.port=${PORT:8080}
-spring.h2.console.enabled=true
-
-# Connection pool configuration
-spring.datasource.hikari.connection-timeout=30000
-spring.datasource.hikari.maximum-pool-size=50
-
-# Logging
-logging.level.org.hibernate.SQL=INFO
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+spring.profiles.active=prod
 debug=true
-server.error.whitelabel.enabled=false
