--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,9 @@ spring.datasource.username=sql12738212
 spring.datasource.password=Pc2QYPmdqP
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.profiles.active=prod
 debug=true
+
+# Explicitly set the JDBC URL for Hibernate
+jakarta.persistence.jdbc.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12738212
