--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12738212
-spring.datasource.username=sql12738212
-spring.datasource.password=Pc2QYPmdqP
+spring.datasource.url=jdbc:mysql://sql12.freesqldatabase.com:3306/sql12738232
+spring.datasource.username=sql12738232
+spring.datasource.password=bv5JRRzyWH
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
